app/assets/stylesheets/style.css
/************************************************************************************
RESET
*************************************************************************************/
html, body, address, blockquote, div, dl, form, h1, h2, h3, h4, h5, h6, ol, p, pre, table, ul,
dd, dt, li, tbody, td, tfoot, th, thead, tr, button, del, ins, map, object,
a, abbr, acronym, b, bdo, big, br, cite, code, dfn, em, i, img, kbd, q, samp, small, span,
strong, sub, sup, tt, var, legend, fieldset, figure {
	margin: 0;
	padding: 0;
}

html {
	background: #000;
}

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
    display: block;
}

/************************************************************************************
GENERAL STYLING
*************************************************************************************/
body {
	font: 1em/1.7em Helvetica, Arial, sans-serif;
	color: #888;
	word-wrap: break-word;
	overflow-x: hidden;
	background: #fff;
}
a {
	color: #09c;
	text-decoration: underline;
	outline: none;
	-webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    transition: 0.3s;
}
a:hover {
	color: #0cc;
	text-decoration: none;
}
a img:hover {
	opacity: .5;
	-webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    transition: 0.3s;
}
p {
	margin: .2em 0 2em;
	padding: 0;
}

.sidebar-none #content {
	width: 100%;
	float: none;
	padding: 0;
}

/* HEADINGS
================================================ */
h1, h2, h3, h4, h5, h6 {
	line-height: 1.5em;
	/*margin: 0 0 1.4em;*/
	font-family: 'Josefin Sans', sans-serif;
	font-weight: normal;
	color: #000;
}
h1 {
	font-size: 2.5em;
}
h2 {
	font-size: 1.8em;
}
h3 {
	font-size: 1.7em;
}
h4 {
	font-size: 1.5em;
	color: #888
}
h5 {
	font-size: 1.3em;
}
h6 {
	font-size: 1.2em;
}

/* FORM
================================================ */
/* form input */
input, textarea, select, input[type=search], button {
	font-size: 120%;
	font-family: 'Josefin Sans', sans-serif;
}
input[type=text], input[type=password], textarea, input[type=search], input[type=email] {
	background: #eee;
	border: none;
	padding: 10px;
	border-radius: 5px;
	-webkit-appearance: none;
}
input[type=text], input[type=search], input[type=email] {
	width: 240px;
	max-width: 90%;
}

/* form button */
input[type=reset], input[type=submit], button {
	background: #f06544;
	color: #fff;
	border: none;
	padding: 7px 20px;
	cursor: pointer;
	border-radius: 10px;
	text-transform: uppercase;
	-webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    transition: 0.3s;
}


/* form input:hover */
input[type=reset]:hover, input[type=submit]:hover, button:hover {
	background: #FF7F5E;
	color: #fff;
}

/************************************************************************************
STRUCTURE
*************************************************************************************/
/* main page width */
.pagewidth,
.section-inner {
	width: 1064px;
	max-width: 100%;
	margin: 0 auto;
}

.section-inner {
	padding-top: 2%;
	padding-bottom: 8%;
}

.sidebar-none.list-post .section-inner {
	max-width: 100%;
	margin-left: auto;
	margin-right: auto;
}

#zip-code {
	margin-bottom: 10px;
}

#location-next-step {
	display: none;
}

.circle-image img {
	border-radius: 100%;
}

/************************************************************************************
HEADER
*************************************************************************************/
#headerwrap {
	/*background: #fc0;*/
	background: rgb(130,187,67);
}
#header {
	text-align: center;
	padding: 0;
	overflow: inherit;
}

/*
SITE LOGO
================================================ */
#site-logo {
	font-size: 5.5em;
	line-height: 1.25em;
	text-align: center;
	margin: 0 auto .3em;
	padding: 65px 0 10px;
	text-transform: uppercase;
	letter-spacing: .05em
}
#site-logo a {
	color: #fff;
	text-decoration: none;
}
#site-logo a:hover {
	text-decoration: none;
}

/*
SITE DESCRIPTION
================================================ */
#site-description {
	font-family: 'Josefin Sans', sans-serif;
	font-size: 1.4em;
	margin: 0 0 30px 0;
	padding: 0 0 20px 0;
	line-height: 110%;
	font-weight: normal;
	color: #fc0;
}

/************************************************************************************
SHORTCODE
*************************************************************************************/
/*
BUTTON STYLES
================================================ */
a.shortcode.button {
	color: #fff;
	letter-spacing: .1em;
	padding: 10px 20px 8px;
	font-family: 'Josefin Sans', sans-serif;
	text-transform: uppercase;
	background-color: #f06544;
	border: none;
}

a.shortcode.button:hover {
	background-color: #FF7F5E;
}

a.shortcode.button.flat {
	box-shadow: none;
	text-shadow: none;
}

a.shortcode.button.green {
	background-color: rgb(128,200,112); !important;
}
a.shortcode.button.green:hover {
	background-color: rgb(181,225,149); !important;
}

a.shortcode.button.large {
	font-size: 2em;
	font-weight: normal;
	padding: 15px 30px 12px;
}

/* button shape */
a.shortcode.button.rounded {
	border-radius: 10px;
}


/************************************************************************************
FOOTER
*************************************************************************************/
#footerwrap {
	background: #000;
}

#footer {
	clear: both;
	text-align: center;
	padding: 5% 0;
}

.footer-text {
	clear: left;
	font-size: .75em;
}
.footer-text a {
	color: #ccc;
	text-decoration: none;
}

.back-top a {
	background: rgb(130,187,67);
	border-radius: 100%;
	width: 60px;
	height: 40px;
	display: block;
	padding: 20px 0 0;
	margin: 0 auto 5%;
}
.back-top a:hover {
	background: #fc0;
}

.back-top-arrow {
	background-image: url('/assets/back-top.png');
	display: inline-block;
	height: 18px;
	width: 30px;
}

/************************************************************************************
POST
*************************************************************************************/
.post {
	margin-bottom: 50px;
}

/* post content */
.post-content {
	min-width: 140px;
	overflow: hidden;
}

/* post title */
.post-title {
	margin: 0 0 5px;
	font-size: 2.5em;
	line-height: 1.3;
}
.post-title a {
	color: #000;
	text-decoration: none;
}
.post-title a:hover {
	color: #999;
}

/* post date */
.post-date {
	display: block;
	font-family: 'Josefin Sans', sans-serif;
	color: #999;
	text-transform: uppercase;
	font-size: 1.2em;
	letter-spacing: 1px;
	margin: 0 0 15px;
}

/* post image */
.post-image {
	width: 145px;
	height: 145px;
	border-radius: 73px;
	line-height: 150px;
	text-align: center;
	background: #000;
	font-family: 'Josefin Sans', sans-serif;
	font-size: 2.5em;
	color: #999;

}
.post-image img{
	border-radius: 10px;
}
.post-image.left {
	float: left;
	margin-right: 3.2%;
}
.post-image.right {
	float: right;
	margin-left: 3.2%;
}

/* post meta */
.post-meta {
	margin: 0 0 5px;
	color: #999;
	font-family: 'Josefin Sans', sans-serif;
	text-transform: uppercase;
	font-size: 1.2em;
	line-height: 1.4em;
}
.post-meta a {
	color: #999;
	text-decoration: none;
}
.post-meta .separator {
	color: #eee;
}

/* List post */
.shortcode.list-post {
	max-width: 100%;
	margin: 0 auto;
}
.shortcode.list-post .post-image, .shortcode.list-post .post-station {
	float: left;
	margin-right: 7%;
}
.shortcode.list-post .post-social {
	float: right;
	margin-top: 1%;	
}
.single-post .post img {
	border-radius: 10px;
}

.twitter {
	background-image: url('/assets/twitter.png');
	display: inline-block;
	height: 32px;
	width: 32px;
}

.facebook {
	background-image: url('/assets/facebook.png');
	display: inline-block;
	height: 32px;
	width: 32px;
}

/************************************************************************************
CLEAR & ALIGNMENT
*************************************************************************************/
.clear {
	clear: both;
}
.left {
	float: left;
}
.right {
	float: right;
}
.textleft {
	text-align: left;
}
.textright {
	text-align: right;
}
.textcenter {
	text-align: center;
}
.vertical{
	vertical-align: middle;
	display: table-cell;
}

/* clearfix */
.clearfix:after, .widget li:after, #body:after, #footer:after, footer:after, .pagenav:after, #main-nav:after, .menu:after, #content:after
{ visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
.clearfix, .widget li, #body, #footer, footer, .pagenav, #main-nav, .menu, #content
{ display: inline-block; }
/* clearfix for ie7 */
.clearfix, .widget li, #body, #footer, footer, .pagenav, #main-nav, .menu, #content
{ display: block; zoom: 1; }

/************************************************************************************
SKROLLABLE
*************************************************************************************/
.skrollable:not(.progress-bar-bg) {
	position:relative !important;
}

/* parallax scrolling */
html.skrollr-mobile,
.skrollr-mobile body {
	height: auto;
	min-height: 100%;
}

/* fake scroll */
.skrollr-mobile #skrollr-body {
	height: 100%;
	width: 100%;
	display: block;
}
/* fix blank white page mobile */
.skrollr-mobile #skrollr-body #pagewrap > * {
	-webkit-transform:translate3d(0,0,0);
}

